# Darwinian-GA

./: LICENSE  README.md  darwinian.py  pyproject.toml  setup.py
examples/: backpack.py  maximum_and_minimum.py  shortest_path.py
scr/darwinian/: __init__.py  a  ga.py
scr/examples/: backpack.py  maximum_and_minimum.py
